--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,8 @@
         </dependency>
         <dependency>
             <groupId>org.modelmapper</groupId>
-            <artifactId>modelmapper</artifactId>
-            <version>3.2.0</version>
+            <artifactId>modelmapper-module-record</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.jacoco</groupId>
